# Abstact_Class_Example_for_CPP

./: LICENSE  README.md
AbstractClassExample/: AbstractClassExample.cpp  ActualImple.cpp  ActualImple.h  BasicInterface.h  CMakeLists.txt
